# Digital_Bargeld-exchange

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  bootstrap  configure.ac
contrib/: Doxyfile  Makefile.am  auditor-report.tex.j2  coverage.sh  gnunet.tag  microhttpd.tag  render.py  taler-bank-manage-testing  taler-exchange-revoke  uncrustify.cfg  uncrustify.sh
contrib/pp/: Makefile.am
contrib/samples/: auditor.json  wire-auditor.json
contrib/tos/: Makefile.am  tos.rst
doc/: .gitignore  Makefile.am  coding-style.txt  exchange-db-generate.sh  taler-auditor-exchange.1  taler-auditor-sign.1  taler-auditor.1  taler-bank-transfer.1  taler-config-generate.1  taler-exchange-aggregator.1  taler-exchange-benchmark.1  taler-exchange-dbinit.1  taler-exchange-httpd.1  taler-exchange-keycheck.1  taler-exchange-keyup.1  taler-exchange-reservemod.1  taler-exchange-sepa.1  taler-exchange-wire.1  taler-exchange-wirewatch.1  taler-exchange.texi  taler-mint-dbinit.1  taler-mint-httpd.1  taler-mint-keycheck.1  taler-mint-keyup.1  taler-mint-reservemod.1  taler-mint-sepa.1  taler.conf.5
doc/doxygen/: Makefile.am  taler-exchange.doxy  taler-mint.doxy  taler.doxy
doc/manual/: Makefile.am  manual.texi
doc/paper/: offline.tex  postquantum.tex  postquantum_melt.tex  rfc.bib  ro.bib  taler.bib  taler.tex  taler_FC2016.txt  taler_FC2017.txt  trash
src/: Makefile.am  taler.conf
src/auditor/: .gitignore  Makefile.am  auditor-basedb.age  auditor-basedb.fees  auditor-basedb.mpub  auditor-basedb.sql  auditor.conf  generate-auditor-basedb.conf  generate-auditor-basedb.sh  generate-revoke-basedb.sh  report-lib.c  report-lib.h  revoke-basedb.age  revoke-basedb.fees  revoke-basedb.mpub  revoke-basedb.sql  taler-auditor-aggregation.c  taler-auditor-coins.c  taler-auditor-dbinit.c  taler-auditor-deposits.c  taler-auditor-exchange.c  taler-auditor-httpd.c  taler-auditor-httpd.h  taler-auditor-httpd_db.c  taler-auditor-httpd_db.h  taler-auditor-httpd_deposit-confirmation.c  taler-auditor-httpd_deposit-confirmation.h  taler-auditor-httpd_exchanges.c  taler-auditor-httpd_exchanges.h  taler-auditor-httpd_mhd.c  taler-auditor-httpd_mhd.h  taler-auditor-httpd_parsing.c  taler-auditor-httpd_parsing.h  taler-auditor-httpd_responses.c  taler-auditor-httpd_responses.h  taler-auditor-reserves.c  taler-auditor-sign.c  taler-auditor.c  taler-auditor.in  taler-helper-auditor-aggregation.c  (+8 more)
src/auditor-lib/: .gitignore  Makefile.am  auditor_api_common.c  auditor_api_deposit_confirmation.c  auditor_api_exchanges.c  auditor_api_handle.c  auditor_api_handle.h  backoff.h  curl_defaults.c  curl_defaults.h  test_auditor_api.c  test_auditor_api.conf  testing_auditor_api_cmd_deposit_confirmation.c  testing_auditor_api_cmd_exchanges.c  testing_auditor_api_cmd_exec_auditor.c  testing_auditor_api_cmd_exec_auditor_dbinit.c  testing_auditor_api_cmd_exec_wire_auditor.c  testing_auditor_api_helpers.c
src/auditordb/: 0001.sql  Makefile.am  auditor-0001.sql  auditordb-postgres.conf  auditordb_plugin.c  drop0001.sql  plugin_auditordb_postgres.c  restart0001.sql  test-auditor-db-postgres.conf  test_auditordb.c
src/bank-lib/: .gitignore  Makefile.am  bank.conf  bank_api_admin.c  bank_api_common.c  bank_api_common.h  bank_api_config.c  bank_api_context.c  bank_api_context.h  bank_api_credit.c  bank_api_debit.c  bank_api_history.c  bank_api_json.c  bank_api_json.h  bank_api_parse.c  bank_api_payto.c  bank_api_reject.c  bank_api_transaction.c  bank_api_transfer.c  bank_twisted.conf  fakebank.c  fakebank.h  fakebank_history.c  taler-bank-transfer.c  taler-fakebank-run.c  test_bank_api.c  test_bank_api_new.c  test_bank_api_twisted.c  test_bank_api_twisted_NEW.c  test_bank_api_with_fakebank.c  test_bank_api_with_fakebank_new.c  test_bank_api_with_fakebank_twisted.c  test_bank_interpreter.c  test_bank_interpreter.h  testing_api_cmd_admin_add_incoming.c  testing_api_cmd_history.c  testing_api_cmd_history_credit.c  testing_api_cmd_history_debit.c  testing_api_cmd_reject.c  testing_api_cmd_transfer.c  (+1 more)
src/benchmark/: Makefile.am  auditor-basedb.fees  auditor-basedb.mpub  auditor-basedb.sql  bank_details.json  benchmark.conf  example.conf  generate-auditor-basedb.conf  generate-auditor-basedb.sh  merchant_details.json  taler-exchange-benchmark  taler-exchange-benchmark-new.c  taler-exchange-benchmark.c  taler-exchange-benchmark.conf
src/curl/: Makefile.am  curl.c
src/exchange/: .gitignore  Makefile.am  exchange.conf  taler-config-generate  taler-exchange-aggregator.c  taler-exchange-closer.c  taler-exchange-httpd.c  (+79 more)
src/exchange-lib/: Makefile.am  afl-generate.sh  curl_defaults.c  curl_defaults.h  exchange_api_admin.c  exchange_api_common.c  exchange_api_common.h  exchange_api_context.c  exchange_api_context.h  exchange_api_deposit.c  exchange_api_deposit_wtid.c  exchange_api_handle.c  exchange_api_handle.h  exchange_api_json.c  exchange_api_json.h  exchange_api_payback.c  exchange_api_refresh.c  exchange_api_refresh_link.c  exchange_api_refund.c  exchange_api_reserve.c  exchange_api_track_transaction.c  exchange_api_track_transfer.c  exchange_api_wire.c  exchange_api_wire_deposits.c  test_exchange_api.c  test_exchange_api.conf  test_exchange_api_keys_cherry_picking.c  test_exchange_api_keys_cherry_picking.conf  test_exchange_api_keys_cherry_picking_extended.conf  test_exchange_api_keys_cherry_picking_extended_2.conf  test_exchange_api_keys_cherry_picking_new.c  test_exchange_api_new.c  test_exchange_api_overlapping_keys_bug.c  test_exchange_api_twisted.c  test_exchange_api_twisted.conf  testing_api_cmd_bank_check.c  testing_api_cmd_batch.c  testing_api_cmd_check_keys.c  testing_api_cmd_deposit.c  testing_api_cmd_exec_aggregator.c  (+34 more)
src/exchange-tools/: .gitignore  Makefile.am  auditor.conf  coins.conf  exchange-signkeys.conf  key-helper.c  taler-auditor-sign.c  taler-exchange-dbinit.c  taler-exchange-keycheck.c  taler-exchange-keyup.c  taler-exchange-reservemod.c  taler-exchange-sepa.c  taler-exchange-tvg.c  taler-exchange-wire.c  taler-wire.c  test_taler_exchange_httpd.conf  test_taler_exchange_keyup.sh
(+2535 files in other folders)
