# This Makefile.am is in the public domain

SUBDIRS = .

man_MANS = \
  taler-auditor.1 \
  taler-auditor-exchange.1 \
  taler-auditor-sign.1 \
  taler-bank-transfer.1 \
  taler-config-generate.1 \
  taler-exchange-aggregator.1 \
  taler-exchange-dbinit.1 \
  taler-exchange-httpd.1 \
  taler-exchange-keyup.1 \
  taler-exchange-keycheck.1 \
  taler-exchange-wire.1 \
  taler-exchange-wirewatch.1 \
  taler-exchange-benchmark.1 \
  taler.conf.5

EXTRA_DIST = \
  coding-style.txt \
  $(man_MANS) \
